Switch to the OpenTelemetry wire format for listing attributes
We currently have a custom Protobuf message for listing OpenTelemetry
trace attributes. It turns out that the OpenTelemetry gRPC wire format
also provides a message that is perfectly usable for this.

In an ideal world, the OpenTelemetry SDK for Go would provide a utility
function for doing the conversion from Protobuf to native for us.
Unfortunately, any code in this area seems to be off limits and is only
capable of converting from native to Protobuf; not the other way around.

This change adds a custom method for this purpose. We place it in
pkg/otel, so that we can easily test it. Furthermore, it can now be
reused by AuthenticationMetadata.

--- a/pkg/proto/configuration/global/BUILD.bazel
+++ b/pkg/proto/configuration/global/BUILD.bazel
@@ -18,6 +18,7 @@ proto_library(
         "//pkg/proto/configuration/http:http_proto",
         "@com_google_protobuf//:duration_proto",
         "@com_google_protobuf//:empty_proto",
+        "@io_opentelemetry_proto//:common_proto",
     ],
 )
 
@@ -29,5 +30,6 @@ go_proto_library(
     deps = [
         "//pkg/proto/configuration/grpc",
         "//pkg/proto/configuration/http",
+        "@io_opentelemetry_go_proto_otlp//common/v1:common",
     ],
 )
