--- a/pkg/otel/BUILD.bazel
+++ b/pkg/otel/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = [
         "active_spans_reporting_http_handler.go",
         "grpc_otlp_trace_client.go",
+        "key_value.go",
         "maximum_rate_sampler.go",
         "w3c_trace_context.go",
     ],
@@ -23,8 +24,11 @@ go_library(
         "@io_opentelemetry_go_otel_sdk//trace",
         "@io_opentelemetry_go_otel_trace//:trace",
         "@io_opentelemetry_go_proto_otlp//collector/trace/v1:trace",
+        "@io_opentelemetry_go_proto_otlp//common/v1:common",
         "@io_opentelemetry_go_proto_otlp//trace/v1:trace",
         "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//codes",
+        "@org_golang_google_grpc//status",
     ],
 )
 
@@ -32,6 +36,7 @@ go_test(
     name = "otel_test",
     srcs = [
         "active_spans_reporting_http_handler_test.go",
+        "key_value_test.go",
         "maximum_rate_sampler_test.go",
         "w3c_trace_context_test.go",
     ],
@@ -39,12 +44,16 @@ go_test(
     deps = [
         ":otel",
         "//internal/mock",
+        "//pkg/testutil",
         "@com_github_golang_mock//gomock",
         "@com_github_stretchr_testify//require",
         "@io_opentelemetry_go_otel//attribute",
         "@io_opentelemetry_go_otel//codes",
         "@io_opentelemetry_go_otel_sdk//trace",
         "@io_opentelemetry_go_otel_trace//:trace",
+        "@io_opentelemetry_go_proto_otlp//common/v1:common",
+        "@org_golang_google_grpc//codes",
+        "@org_golang_google_grpc//status",
     ],
 )
 
