--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -289,6 +289,7 @@ go_library(
     visibility = ["//:__subpackages__"],
     # keep
     deps = [
+        "//pkg/auth",
         "//pkg/blobstore",
         "//pkg/blobstore/buffer",
         "//pkg/blobstore/local",
