--- a/pkg/auth/BUILD.bazel
+++ b/pkg/auth/BUILD.bazel
@@ -14,12 +14,16 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/digest",
+        "//pkg/otel",
+        "//pkg/proto/auth",
         "//pkg/proto/configuration/auth",
         "//pkg/util",
         "@com_github_jmespath_go_jmespath//:go-jmespath",
+        "@io_opentelemetry_go_otel//attribute",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
         "@org_golang_google_protobuf//encoding/protojson",
+        "@org_golang_google_protobuf//types/known/structpb",
     ],
 )
 
@@ -27,6 +31,7 @@ go_test(
     name = "auth_test",
     srcs = [
         "any_authorizer_test.go",
+        "authentication_metadata_test.go",
         "jmespath_expression_authorizer_test.go",
         "static_authorizer_test.go",
     ],
@@ -34,11 +39,14 @@ go_test(
         ":auth",
         "//internal/mock",
         "//pkg/digest",
+        "//pkg/proto/auth",
         "//pkg/testutil",
         "@com_github_golang_mock//gomock",
         "@com_github_jmespath_go_jmespath//:go-jmespath",
         "@com_github_stretchr_testify//require",
+        "@io_opentelemetry_go_otel//attribute",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
+        "@org_golang_google_protobuf//types/known/structpb",
     ],
 )
