--- a/pkg/proto/configuration/grpc/BUILD.bazel
+++ b/pkg/proto/configuration/grpc/BUILD.bazel
@@ -7,11 +7,11 @@ proto_library(
     srcs = ["grpc.proto"],
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/proto/auth:auth_proto",
         "//pkg/proto/configuration/jwt:jwt_proto",
         "//pkg/proto/configuration/tls:tls_proto",
         "@com_google_protobuf//:duration_proto",
         "@com_google_protobuf//:empty_proto",
-        "@com_google_protobuf//:struct_proto",
     ],
 )
 
@@ -21,6 +21,7 @@ go_proto_library(
     proto = ":grpc_proto",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/proto/auth",
         "//pkg/proto/configuration/jwt",
         "//pkg/proto/configuration/tls",
     ],
