--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -252,6 +252,7 @@ gomock(
     out = "util.go",
     interfaces = [
         "ErrorLogger",
+        "ProtoBytesFieldVisitor",
         "UUIDGenerator",
     ],
     library = "//pkg/util",
@@ -314,5 +315,6 @@ go_library(
         "@io_opentelemetry_go_otel_trace//:trace",
         "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//metadata",
+        "@org_golang_google_protobuf//encoding/protowire",
     ],
 )
