--- a/pkg/util/BUILD.bazel
+++ b/pkg/util/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
         "error_logger.go",
         "jsonnet.go",
         "non_empty_stack.go",
+        "proto.go",
         "status.go",
         "tls.go",
         "uuid.go",
@@ -21,6 +22,7 @@ go_library(
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
         "@org_golang_google_protobuf//encoding/protojson",
+        "@org_golang_google_protobuf//encoding/protowire",
         "@org_golang_google_protobuf//proto",
     ],
 )
@@ -29,14 +31,18 @@ go_test(
     name = "util_test",
     srcs = [
         "buckets_test.go",
+        "proto_test.go",
         "tls_test.go",
     ],
     deps = [
         ":util",
+        "//internal/mock",
         "//pkg/proto/configuration/tls",
         "//pkg/testutil",
+        "@com_github_golang_mock//gomock",
         "@com_github_stretchr_testify//require",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
+        "@org_golang_google_protobuf//encoding/protowire",
     ],
 )
