--- a/pkg/blobstore/completenesschecking/BUILD.bazel
+++ b/pkg/blobstore/completenesschecking/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
+        "@org_golang_google_protobuf//encoding/protowire",
     ],
 )
 
@@ -31,5 +32,6 @@ go_test(
         "@com_github_stretchr_testify//require",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
+        "@org_golang_google_protobuf//proto",
     ],
 )
