Support TLS Server/Client certificates read from a file, and refreshed on an interval.
Incompatible Changes:

This change moves the existing `{client,server}_certificate` and `{client,server}_private_key` into `{client,server}_key_pair_data.certificate`  and `{client,server}_key_pair_data.private_key`

This change adds an alternate strategy for specifying certificates/private keys by using `{client,server}_key_pair_files.certificate` and `{client,server}_key_pair_files.private_key`  which should reference PEM files on disk. A refresh_interval must also be specified to dictate the interval at which the files should be read and used in place of the existing certificate/key if such files have been changed.

In kubernetes for example, this allows a side-car to rotate certificate based on user's needs.

--- a/pkg/proto/configuration/tls/BUILD.bazel
+++ b/pkg/proto/configuration/tls/BUILD.bazel
@@ -6,6 +6,9 @@ proto_library(
     name = "tls_proto",
     srcs = ["tls.proto"],
     visibility = ["//visibility:public"],
+    deps = [
+        "@com_google_protobuf//:duration_proto",
+    ],
 )
 
 go_proto_library(
