--- a/pkg/util/BUILD.bazel
+++ b/pkg/util/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
         "proto.go",
         "status.go",
         "tls.go",
+        "tls_certificate.go",
         "uuid.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/util",
@@ -24,6 +25,7 @@ go_library(
         "@org_golang_google_protobuf//encoding/protojson",
         "@org_golang_google_protobuf//encoding/protowire",
         "@org_golang_google_protobuf//proto",
+        "@org_golang_google_protobuf//types/known/durationpb",
     ],
 )
 
@@ -32,6 +34,7 @@ go_test(
     srcs = [
         "buckets_test.go",
         "proto_test.go",
+        "tls_certificate_test.go",
         "tls_test.go",
     ],
     deps = [
@@ -44,5 +47,6 @@ go_test(
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
         "@org_golang_google_protobuf//encoding/protowire",
+        "@org_golang_google_protobuf//types/known/durationpb",
     ],
 )
