Add support for SHA256TREE
SHA256TREE is a tree based hashing algorithm that uses the SHA-256
compression function, but something similar to BLAKE3's tree structure.

The advantage of SHA256TREE over SHA-256 is that it can be computed in
parallel, using CPU SIMD extensions. The advantage of SHA256TREE over
BLAKE3 is that it can still make use of special SHA-256 specific
hardware instructions that we have on architectures like ARM64.
Furthermore, it doesn't have some of BLAKE3's protections against length
extension attacks. Though this sounds like a bad thing, it does permit
us to do chunking/decomposition of large CAS objects, while guaranteeing
data integrity.

As support for SHA256TREE has been discussed extensively in the Remote
API working, but hasn't been merged at this point yet, I have gone ahead
and added diff files for my PRs against remote-apis to this repository.
The reason being that I also have some future changes lined up, and
those are harder to maintain without this PR being merged.

Note that this change reworks the implementation of digest.Digest. Most
notably, sharding is also changed. This means that if you use sharding,
you MUST update all of your frontend, workers, etc. to work properly.

--- a/pkg/blobstore/mirrored/BUILD.bazel
+++ b/pkg/blobstore/mirrored/BUILD.bazel
@@ -29,6 +29,7 @@ go_test(
         "//pkg/blobstore/buffer",
         "//pkg/digest",
         "//pkg/testutil",
+        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
         "@com_github_golang_mock//gomock",
         "@com_github_stretchr_testify//require",
         "@org_golang_google_grpc//codes",
