Add the File System Access Cache (FSAC) to bb_storage
This new data store can be used by bb_worker to store profiles of which
paths on disk a build action accesses during its execution. It can be
reloaded later on when a similar action is executed, allowing the worker
to prefetch the relevant parts of the input root.

https://github.com/buildbarn/bb-adrs/blob/master/0010-file-system-access-cache.md

--- a/cmd/bb_storage/BUILD.bazel
+++ b/cmd/bb_storage/BUILD.bazel
@@ -17,6 +17,7 @@ go_library(
         "//pkg/global",
         "//pkg/grpc",
         "//pkg/proto/configuration/bb_storage",
+        "//pkg/proto/fsac",
         "//pkg/proto/icas",
         "//pkg/proto/iscc",
         "//pkg/util",
