--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -13,6 +13,7 @@ go_library(
         "empty_blob_injecting_blob_access.go",
         "error_blob_access.go",
         "existence_caching_blob_access.go",
+        "fsac_read_buffer_factory.go",
         "hierarchical_instance_names_blob_access.go",
         "http_blob_access.go",
         "icas_read_buffer_factory.go",
@@ -38,6 +39,7 @@ go_library(
         "//pkg/cloud/aws",
         "//pkg/digest",
         "//pkg/eviction",
+        "//pkg/proto/fsac",
         "//pkg/proto/icas",
         "//pkg/proto/iscc",
         "//pkg/util",
