--- a/pkg/blobstore/grpcclients/BUILD.bazel
+++ b/pkg/blobstore/grpcclients/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = [
         "ac_blob_access.go",
         "cas_blob_access.go",
+        "fsac_blob_access.go",
         "icas_blob_access.go",
         "iscc_blob_access.go",
     ],
@@ -15,6 +16,7 @@ go_library(
         "//pkg/blobstore/buffer",
         "//pkg/blobstore/slicing",
         "//pkg/digest",
+        "//pkg/proto/fsac",
         "//pkg/proto/icas",
         "//pkg/proto/iscc",
         "//pkg/util",
