--- a/pkg/blobstore/grpcservers/BUILD.bazel
+++ b/pkg/blobstore/grpcservers/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
         "action_cache_server.go",
         "byte_stream_server.go",
         "content_addressable_storage_server.go",
+        "file_system_access_cache_server.go",
         "indirect_content_addressable_storage_server.go",
         "initial_size_class_cache_server.go",
     ],
@@ -15,6 +16,7 @@ go_library(
         "//pkg/blobstore",
         "//pkg/blobstore/buffer",
         "//pkg/digest",
+        "//pkg/proto/fsac",
         "//pkg/proto/icas",
         "//pkg/proto/iscc",
         "//pkg/util",
