--- a/pkg/blobstore/configuration/BUILD.bazel
+++ b/pkg/blobstore/configuration/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
         "blob_replicator_creator.go",
         "cas_blob_access_creator.go",
         "cas_blob_replicator_creator.go",
+        "fsac_blob_access_creator.go",
         "icas_blob_access_creator.go",
         "iscc_blob_access_creator.go",
         "new_blob_access.go",
