--- a/pkg/blobstore/configuration/BUILD.bazel
+++ b/pkg/blobstore/configuration/BUILD.bazel
@@ -32,6 +32,7 @@ go_library(
         "//pkg/capabilities",
         "//pkg/clock",
         "//pkg/cloud/aws",
+        "//pkg/cloud/gcp",
         "//pkg/digest",
         "//pkg/eviction",
         "//pkg/filesystem",
@@ -46,6 +47,7 @@ go_library(
         "@com_github_go_redis_redis_extra_redisotel//:redisotel",
         "@com_github_go_redis_redis_v8//:redis",
         "@com_github_google_uuid//:uuid",
+        "@com_google_cloud_go_storage//:storage",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
         "@org_golang_x_sync//errgroup",
