--- a/cmd/bb_storage/BUILD.bazel
+++ b/cmd/bb_storage/BUILD.bazel
@@ -16,6 +16,7 @@ go_library(
         "//pkg/capabilities",
         "//pkg/global",
         "//pkg/grpc",
+        "//pkg/program",
         "//pkg/proto/configuration/bb_storage",
         "//pkg/proto/fsac",
         "//pkg/proto/icas",
@@ -24,7 +25,8 @@ go_library(
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
         "@go_googleapis//google/bytestream:bytestream_go_proto",
         "@org_golang_google_grpc//:go_default_library",
-        "@org_golang_x_sync//errgroup",
+        "@org_golang_google_grpc//codes",
+        "@org_golang_google_grpc//status",
     ],
 )
 
