--- a/pkg/grpc/BUILD.bazel
+++ b/pkg/grpc/BUILD.bazel
@@ -36,6 +36,7 @@ go_library(
         "//pkg/auth",
         "//pkg/clock",
         "//pkg/jwt",
+        "//pkg/program",
         "//pkg/proto/configuration/grpc",
         "//pkg/util",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
