Add support for RSA signed JWTs
RSA signed JWTs are often a lot larger than ones using ECDSA and EdDSA,
so in principle it makes little sense to use it. That said, tools like
GitLab CI conveniently generate RSA signed JWTs for each job that it
launches.

Fixes: #164

--- a/pkg/jwt/BUILD.bazel
+++ b/pkg/jwt/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
         "ed25519_signature_validator.go",
         "generate_authorization_header.go",
         "hmac_sha_signature_validator.go",
+        "rsa_sha_signature_validator.go",
         "signature_generator.go",
         "signature_validator.go",
     ],
@@ -37,6 +38,7 @@ go_test(
         "ed25519_signature_validator_test.go",
         "generate_authorization_header_test.go",
         "hmac_sha_signature_validator_test.go",
+        "rsa_sha_signature_validator_test.go",
     ],
     deps = [
         ":jwt",
