Restrict the creation of DeduplicatingBlobReplicator to CAS and ICAS
Right now it's possible to create this backend for all data stores, but
using it will lead to failures in practice. The reason for this is that
only the CAS and ICAS support a FindMissing*() operation, which this
replicator needs to function.

Fixes: #161

--- a/pkg/blobstore/configuration/BUILD.bazel
+++ b/pkg/blobstore/configuration/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
         "cas_blob_replicator_creator.go",
         "fsac_blob_access_creator.go",
         "icas_blob_access_creator.go",
+        "icas_blob_replicator_creator.go",
         "iscc_blob_access_creator.go",
         "new_blob_access.go",
         "new_blob_replicator.go",
