--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -377,10 +377,10 @@
             },
             {
                "env": {
-                  "DOCKER_CONFIG_JSON": "${{ secrets.DOCKER_CONFIG_JSON }}"
+                  "GITHUB_TOKEN": "${{ secrets.GITHUB_TOKEN }}"
                },
                "name": "Install Docker credentials",
-               "run": "mkdir -p ~/.docker && echo \"${DOCKER_CONFIG_JSON}\" > ~/.docker/config.json"
+               "run": "echo \"${GITHUB_TOKEN}\" | docker login ghcr.io -u $ --password-stdin"
             },
             {
                "name": "Push container bb_copy:bb_copy",
