Mark the purgecss target manual
This prevents us from building a Windows version in CI. We only need it
as a tool for the host system.

--- a/pkg/otel/BUILD.bazel
+++ b/pkg/otel/BUILD.bazel
@@ -60,6 +60,7 @@ go_test(
 
 purgecss_bin.purgecss_binary(
     name = "purgecss",
+    tags = ["manual"],
 )
 
 # Create a copy of Bootstrap that only contains the style attributes
