Let ActionResultExpiringBlobAccess take a minimum timestamp
There may be cases where you discover that one or more workers in your
fleet have misbehaved during a certain timeframe (e.g., due to
misconfiguration or hardware issues). After rectifying the issue, you
may want to discard parts of your build cache that were generated during
that timeframe.

This change adds support for specifying a lowerbound on the 'worker
completed' timestamp. Any entry having a timestamp below the lowerbound
will be suppressed by GetActionResult().

--- a/pkg/proto/configuration/blobstore/BUILD.bazel
+++ b/pkg/proto/configuration/blobstore/BUILD.bazel
@@ -16,6 +16,7 @@ proto_library(
         "//pkg/proto/configuration/tls:tls_proto",
         "@com_google_protobuf//:duration_proto",
         "@com_google_protobuf//:empty_proto",
+        "@com_google_protobuf//:timestamp_proto",
         "@go_googleapis//google/rpc:status_proto",
     ],
 )
