Remove our use of ineffassign
Recent versions of the Go compiler have become better at reporting
ineffective assignments. We haven't seen any errors generated by
ineffassign that weren't caught by the compiler in years.

--- a/tools/BUILD.bazel
+++ b/tools/BUILD.bazel
@@ -6,8 +6,5 @@ go_library(
     importpath = "github.com/buildbarn/bb-storage/tools",
     tags = ["manual"],
     visibility = ["//visibility:public"],
-    deps = [
-        "@cc_mvdan_gofumpt//:gofumpt",
-        "@com_github_gordonklaus_ineffassign//:ineffassign",
-    ],
+    deps = ["@cc_mvdan_gofumpt//:gofumpt"],
 )
