--- a/pkg/blobstore/readfallback/BUILD.bazel
+++ b/pkg/blobstore/readfallback/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
         "//pkg/util",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
+        "@org_golang_x_sync//errgroup",
     ],
 )
 
