--- a/pkg/proto/configuration/blobstore/BUILD.bazel
+++ b/pkg/proto/configuration/blobstore/BUILD.bazel
@@ -17,7 +17,7 @@ proto_library(
         "@com_google_protobuf//:duration_proto",
         "@com_google_protobuf//:empty_proto",
         "@com_google_protobuf//:timestamp_proto",
-        "@go_googleapis//google/rpc:status_proto",
+        "@googleapis//google/rpc:status_proto",
     ],
 )
 
@@ -34,7 +34,7 @@ go_proto_library(
         "//pkg/proto/configuration/grpc",
         "//pkg/proto/configuration/http",
         "//pkg/proto/configuration/tls",
-        "@go_googleapis//google/rpc:status_go_proto",
+        "@org_golang_google_genproto_googleapis_rpc//status",
     ],
 )
 
