--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -323,7 +323,7 @@ go_library(
         "@com_github_go_redis_redis_v8//:redis",
         "@com_github_golang_mock//gomock",
         "@com_github_google_uuid//:uuid",
-        "@go_googleapis//google/longrunning:longrunning_go_proto",
+        "@com_google_cloud_go_longrunning//autogen/longrunningpb",
         "@io_opentelemetry_go_otel//attribute",
         "@io_opentelemetry_go_otel//codes",
         "@io_opentelemetry_go_otel_trace//:trace",
