--- a/pkg/builder/BUILD.bazel
+++ b/pkg/builder/BUILD.bazel
@@ -19,7 +19,7 @@ go_library(
         "//pkg/proto/configuration/builder",
         "//pkg/util",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
-        "@go_googleapis//google/longrunning:longrunning_go_proto",
+        "@com_google_cloud_go_longrunning//autogen/longrunningpb",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
@@ -43,7 +43,7 @@ go_test(
         "@com_github_bazelbuild_remote_apis//build/bazel/semver",
         "@com_github_golang_mock//gomock",
         "@com_github_stretchr_testify//require",
-        "@go_googleapis//google/longrunning:longrunning_go_proto",
+        "@com_google_cloud_go_longrunning//autogen/longrunningpb",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
