Add Prometheus metrics to HTTP servers
We already have Prometheus metrics for HTTP clients (e.g., AWS SDK,
Pushgateway), but don't have it for servers. This has so far not been a
big issue because we tend to use gRPC more frequently, but now that we
have a more advanced authentication framework for HTTP, it makes sense
to give some more insight there as well.

--- a/pkg/http/BUILD.bazel
+++ b/pkg/http/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
         "deny_authenticator.go",
         "header_adding_round_tripper.go",
         "jwt_authenticator.go",
+        "metrics_handler.go",
         "metrics_round_tripper.go",
         "oidc_authenticator.go",
         "server.go",
